--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,6 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{comiskey2024,
+  title = {Estimating the proportion of modern contraceptives supplied by the public and private sectors using a Bayesian hierarchical penalized spline model},
+  author={Comiskey, Hannah and Alkema, Leontine and Cahill, Niamh},
+  journal = {Journal of the Royal Statistical Society Series A: Statistics in Society},
+  year    = 2024
 }
