Add new article citation for Mooney et al. 2024

--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -4,3 +4,11 @@
   journal = {Journal of the Royal Statistical Society Series A: Statistics in Society},
   year    = 2024
 }
+
+@article{Mooney2025,
+  title = {Considering the role of the private sector adjustment in calculating Estimated Modern Use from Family Planning Service Statistics},
+  author={Mooney, Shauna and Alkema, Leontine and Comiskey, Hannah and Sonneveldt, Emily and Bietsch, Kristin and Williamson, Jessica and Rosenberg, Rebecca and Reeves, Margaret and Cahill, Niamh},
+  journal = {VeriXiv},
+  year    = 2024,
+  doi = {https://doi.org/10.12688/verixiv.377.1}
+}
